--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 flask-whooshee==0.9.1
 greenlet==3.2.2
+gunicorn==23.0.0
 idna==3.10
 iniconfig==2.1.0
 itsdangerous==2.2.0
